// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`<FormGroup /> renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 8,
        "paddingTop": 8,
      },
      undefined,
    ]
  }
/>
`;
